DotNet/Manifold/ManifoldNative.cs


        [DllImport(NativeImport, CallingConvention = CallingConvention.Cdecl)]
        public static extern ManifoldManifold* manifold_of_meshgl(IntPtr mem, ManifoldMeshGL* mesh);

        [DllImport(NativeImport, CallingConvention = CallingConvention.Cdecl)]
        public static extern ManifoldManifold* manifold_smooth(IntPtr mem, ManifoldMeshGL* mesh,
            int* half_edges, double* smoothness,
            int n_idxs);

        [DllImport(NativeImport, CallingConvention = CallingConvention.Cdecl)]
        public static extern ManifoldManifold* manifold_extrude(IntPtr mem, ManifoldPolygons* cs,
            double height, int slices,
            double twist_degrees, double scale_x,
            double scale_y);

        [DllImport(NativeImport, CallingConvention = CallingConvention.Cdecl)]
        public static extern ManifoldManifold* manifold_revolve(IntPtr mem, ManifoldPolygons* cs,
            int circular_segments,double revolveDegrees);

        [DllImport(NativeImport, CallingConvention = CallingConvention.Cdecl)]
        public static extern ManifoldManifold* manifold_compose(IntPtr mem, ManifoldManifoldVec* ms);

        [DllImport(NativeImport, CallingConvention = CallingConvention.Cdecl)]
        public static extern ManifoldManifoldVec* manifold_decompose(IntPtr mem, ManifoldManifold* m);

        [DllImport(NativeImport, CallingConvention = CallingConvention.Cdecl)]
        public static extern ManifoldManifold* manifold_as_original(IntPtr mem, ManifoldManifold* m);


        // Manifold Info
        [DllImport(NativeImport, CallingConvention = CallingConvention.Cdecl)]
        public static extern int manifold_is_empty(ManifoldManifold* m);

        [DllImport(NativeImport, CallingConvention = CallingConvention.Cdecl)]
        public static extern ManifoldError manifold_status(ManifoldManifold* m);

        [DllImport(NativeImport, CallingConvention = CallingConvention.Cdecl)]
        public static extern int manifold_num_vert(ManifoldManifold* m);

        [DllImport(NativeImport, CallingConvention = CallingConvention.Cdecl)]
        public static extern int manifold_num_edge(ManifoldManifold* m);

        [DllImport(NativeImport, CallingConvention = CallingConvention.Cdecl)]
        public static extern int manifold_num_tri(ManifoldManifold* m);

        [DllImport(NativeImport, CallingConvention = CallingConvention.Cdecl)]
        public static extern ManifoldBox* manifold_bounding_box(IntPtr  mem, ManifoldManifold* m);

        [DllImport(NativeImport, CallingConvention = CallingConvention.Cdecl)]
        public static extern double manifold_precision(ManifoldManifold* m);

        [DllImport(NativeImport, CallingConvention = CallingConvention.Cdecl)]
        public static extern int manifold_genus(ManifoldManifold* m);

        [DllImport(NativeImport, CallingConvention = CallingConvention.Cdecl)]
        public static extern ManifoldProperties manifold_get_properties(ManifoldManifold* m);

        [DllImport(NativeImport, CallingConvention = CallingConvention.Cdecl)]
        public static extern int manifold_get_circular_segments(double radius);

        [DllImport(NativeImport, CallingConvention = CallingConvention.Cdecl)]
        public static extern int manifold_original_id(ManifoldManifold* m);

        [DllImport(NativeImport, CallingConvention = CallingConvention.Cdecl)]
        public static extern uint manifold_reserve_ids(uint n);

        // public static extern ManifoldManifold *manifold_set_properties(
        //     IntPtr mem, ManifoldManifold *m, int num_prop,
        //     void (*fun)(double *new_prop, ManifoldVec3 position, const double *old_prop,
        // IntPtr ctx),
        // IntPtr ctx);
        [DllImport(NativeImport, CallingConvention = CallingConvention.Cdecl)]
        public static extern ManifoldManifold* manifold_calculate_curvature(IntPtr  mem, ManifoldManifold* m,
            int gaussian_idx, int mean_idx);

        [DllImport(NativeImport, CallingConvention = CallingConvention.Cdecl)]
        public static extern double manifold_min_gap(ManifoldManifold* m, ManifoldManifold* other,
            double searchLength);

        [DllImport(NativeImport, CallingConvention = CallingConvention.Cdecl)]
        public static extern ManifoldManifold* manifold_calculate_normals(IntPtr  mem, ManifoldManifold* m,
            int normal_idx,
            int min_sharp_angle);


        // CrossSection Shapes/Constructors
        [DllImport(NativeImport, CallingConvention = CallingConvention.Cdecl)]
        public static extern ManifoldCrossSection* manifold_cross_section_empty(IntPtr mem);

        [DllImport(NativeImport, CallingConvention = CallingConvention.Cdecl)]
        public static extern ManifoldCrossSection* manifold_cross_section_copy(IntPtr mem,
            ManifoldCrossSection* cs);

        [DllImport(NativeImport, CallingConvention = CallingConvention.Cdecl)]
        public static extern ManifoldCrossSection* manifold_cross_section_of_simple_polygon(
            IntPtr mem, ManifoldSimplePolygon* p, ManifoldFillRule fr);

        [DllImport(NativeImport, CallingConvention = CallingConvention.Cdecl)]
        public static extern ManifoldCrossSection* manifold_cross_section_of_polygons(IntPtr mem,
            ManifoldPolygons* p,
            ManifoldFillRule fr);

        [DllImport(NativeImport, CallingConvention = CallingConvention.Cdecl)]
        public static extern ManifoldCrossSection* manifold_cross_section_square(IntPtr mem, double x,
            double y, int center);

        [DllImport(NativeImport, CallingConvention = CallingConvention.Cdecl)]
        public static extern ManifoldCrossSection* manifold_cross_section_circle(IntPtr mem, double radius,
            int circular_segments);

        [DllImport(NativeImport, CallingConvention = CallingConvention.Cdecl)]
        public static extern ManifoldCrossSection* manifold_cross_section_compose(
            IntPtr mem, ManifoldCrossSectionVec* csv);

        [DllImport(NativeImport, CallingConvention = CallingConvention.Cdecl)]
        public static extern ManifoldCrossSectionVec* manifold_cross_section_decompose(
            IntPtr mem, ManifoldCrossSection* cs);


        
        // CrossSection Vectors
        [DllImport(NativeImport, CallingConvention = CallingConvention.Cdecl)]
        public static extern ManifoldCrossSectionVec *manifold_cross_section_empty_vec(IntPtr mem);
        [DllImport(NativeImport, CallingConvention = CallingConvention.Cdecl)]
        public static extern ManifoldCrossSectionVec *manifold_cross_section_vec(IntPtr mem, int   sz);
        [DllImport(NativeImport, CallingConvention = CallingConvention.Cdecl)]
        public static extern void manifold_cross_section_vec_reserve(ManifoldCrossSectionVec *csv,
            int   sz);
        [DllImport(NativeImport, CallingConvention = CallingConvention.Cdecl)]
        public static extern int   manifold_cross_section_vec_length(ManifoldCrossSectionVec *csv);
        [DllImport(NativeImport, CallingConvention = CallingConvention.Cdecl)]
        public static extern ManifoldCrossSection *manifold_cross_section_vec_get(
            IntPtr mem, ManifoldCrossSectionVec *csv, int idx);
        [DllImport(NativeImport, CallingConvention = CallingConvention.Cdecl)]
        public static extern void manifold_cross_section_vec_set(ManifoldCrossSectionVec *csv, int idx,
            ManifoldCrossSection *cs);
        [DllImport(NativeImport, CallingConvention = CallingConvention.Cdecl)]
        public static extern void manifold_cross_section_vec_push_back(ManifoldCrossSectionVec *csv,
            ManifoldCrossSection *cs);
        
        
        
        // CrossSection Booleans
        [DllImport(NativeImport, CallingConvention = CallingConvention.Cdecl)]
        public static extern ManifoldCrossSection *manifold_cross_section_boolean(IntPtr  mem,
                                                     ManifoldCrossSection *a,
                                                     ManifoldCrossSection *b,
                                                     ManifoldOpType op);
        [DllImport(NativeImport, CallingConvention = CallingConvention.Cdecl)]
        public static extern ManifoldCrossSection *manifold_cross_section_batch_boolean(
    IntPtr  mem, ManifoldCrossSectionVec *csv, ManifoldOpType op);
        [DllImport(NativeImport, CallingConvention = CallingConvention.Cdecl)]
        public static extern ManifoldCrossSection *manifold_cross_section_union(IntPtr  mem,
                                                   ManifoldCrossSection *a,
                                                   ManifoldCrossSection *b);
        [DllImport(NativeImport, CallingConvention = CallingConvention.Cdecl)]
        public static extern ManifoldCrossSection *manifold_cross_section_difference(
    IntPtr  mem, ManifoldCrossSection *a, ManifoldCrossSection *b);
        [DllImport(NativeImport, CallingConvention = CallingConvention.Cdecl)]
        public static extern ManifoldCrossSection *manifold_cross_section_intersection(
    IntPtr  mem, ManifoldCrossSection *a, ManifoldCrossSection *b);

// CrossSection Convex Hulls
        [DllImport(NativeImport, CallingConvention = CallingConvention.Cdecl)]
        public static extern ManifoldCrossSection *manifold_cross_section_hull(IntPtr  mem,
                                                  ManifoldCrossSection *cs);
        [DllImport(NativeImport, CallingConvention = CallingConvention.Cdecl)]
        public static extern ManifoldCrossSection *manifold_cross_section_batch_hull(
    IntPtr  mem, ManifoldCrossSectionVec *css);
        [DllImport(NativeImport, CallingConvention = CallingConvention.Cdecl)]
        public static extern ManifoldCrossSection *manifold_cross_section_hull_simple_polygon(
    IntPtr  mem, ManifoldSimplePolygon *ps);
        [DllImport(NativeImport, CallingConvention = CallingConvention.Cdecl)]
        public static extern ManifoldCrossSection *manifold_cross_section_hull_polygons(
    IntPtr  mem, ManifoldPolygons *ps);
